// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderItem Products renders chat styling if provided 1`] = `
<HeaderItem
  product="chat"
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="chat"
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo--chat dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem Products renders connect styling if provided 1`] = `
<HeaderItem
  product="connect"
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="connect"
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo--connect dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem Products renders explore styling if provided 1`] = `
<HeaderItem
  product="explore"
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="explore"
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo--explore dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem Products renders guide styling if provided 1`] = `
<HeaderItem
  product="guide"
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="guide"
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo--guide dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem Products renders message styling if provided 1`] = `
<HeaderItem
  product="message"
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="message"
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo--message dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem Products renders support styling if provided 1`] = `
<HeaderItem
  product="support"
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="support"
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo--support dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem Products renders talk styling if provided 1`] = `
<HeaderItem
  product="talk"
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="talk"
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo--talk dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem States renders current styling if provided 1`] = `
<HeaderItem
  current={true}
>
  <t>
    <HeaderItem__StyledHeaderItem
      current={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem States renders focused styling if provided 1`] = `
<HeaderItem
  focused={true}
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item is-focused dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem States renders hovered styling if provided 1`] = `
<HeaderItem
  hovered={true}
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      hovered={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item is-hovered dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem renders default styling 1`] = `
<HeaderItem>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem renders logo styling if provided 1`] = `
<HeaderItem
  logo={true}
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      logo={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--logo dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem renders maxX styling if provided 1`] = `
<HeaderItem
  maxX={true}
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      maxX={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--max-x dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem renders maxY styling if provided 1`] = `
<HeaderItem
  maxY={true}
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      maxY={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--max-y dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;

exports[`HeaderItem renders round styling if provided 1`] = `
<HeaderItem
  round={true}
>
  <t>
    <HeaderItem__StyledHeaderItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      round={true}
      tabIndex={0}
    >
      <button
        className="HeaderItem__StyledHeaderItem-rjTJP c-chrome__body__header__item c-chrome__body__header__item--round dnTyCP"
        data-garden-id="chrome.header_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </HeaderItem__StyledHeaderItem>
  </t>
</HeaderItem>
`;
